<resources>
    <string name="app_name">PMCMA</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="welcome_to_pmcma">Welcome to PMCMA !</string>
    <string name="empower_uplift_unite_pmcma_where_compassion_meets_community">Empower, Uplift, Unite: PMCMA, where Compassion Meets Community</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="welcome_back_to_pmcma">Welcome back to PMCMA!</string>
    <string name="log_in_to_stay_connected_with_our_community_and_grow_in_faith">Log in to stay connected with our community and grow in faith</string>
    <string name="login">Login</string>
    <string name="click_here_to_sign_up">Click here to sign up</string>
    <string name="phone_number">Phone Number</string>
    <string name="house_address">House Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_the_pmcma_family">Join the PMCMA family!</string>
    <string name="sign_up_to_experience_fellowship_receive_updates_and_deepen_your_spiritual_journey">Sign up to experience fellowship, receive updates, and deepen your spiritual journey.</string>
    <string name="back_to_login_page">Back to Login Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_details">Edit Details</string>
    <string name="please_enter_your_new_email_address">please enter your new email address</string>
    <string name="please_enter_your_new_house_address">Please enter your new House address</string>
    <string name="please_enter_your_new_phone_number">Please enter your new phone number</string>
    <string name="prayer_request">Prayer Request</string>
    <string name="baptism_request">Baptism Request</string>
    <string name="confirmation_request">Confirmation Request</string>
    <string name="other_request">Other Request</string>
    <string name="about_us">About Us</string>
    <string name="bible">Bible</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="pmcma">PMCMA</string>
    <string name="profile">Profile</string>
    <string name="requests">Requests</string>
    <string name="donation">Donation</string>
    <string name="our_initiatives">Our Initiatives</string>

        <string name="make_a_request_to_pmcma">Make a Request to PMCMA</string>
        <string name="full_name">Full Name</string>
        <string name="email_address">Email Address</string>
        <string name="phone_numberbptsm">Phone Number</string>
        <string name="special_requests_or_comments">Special Requests or Comments</string>
        <string name="submit_request">Submit Request</string>
        <string name="back_to_home">Back to Home</string>


    <!-- Donation Categories List (10 examples) -->
    <string-array name="donation_categories">
        <item>Tithes</item>
        <item>Building Fund</item>
        <item>Sunday Service Offering</item>
        <item>Missions and Outreach</item>
        <item>Children\'s Ministry</item>
        <item>Youth Ministry</item>
        <item>Music and Worship</item>
        <item>Food donations</item>
        <item>Special Projects</item>
        <item>Pastoral Support</item>
        <item>Community Support</item>
        <item>Thanksgiving</item>
        <item>Phakamisa</item>
        <item>Sizanani</item>
        <item>Greenfields</item>
        <item>Education Fund</item>
        <item>Medical Missions</item>
        <item>Church Renovation</item>
        <item>Disaster Relief</item>
        <item>Missionary Support</item>
        <item>Charitable Programs</item>
        <item>Holiday Giving</item>
        <item>Youth Empowerment</item>
        <item>Technology Fund</item>
        <item>Other</item>
    </string-array>


    =======
    >>>>>>> 832ac0762c84d2d2aa8ee5c09d810cda650db580
    >>>>>>> Stashed changes
</resources>